@@ -8,11 +8,13 @@
 import subprocess
 import os
 import signal
+import src.core
 proc = subprocess.Popen("ps -A x | grep artillery", stdout=subprocess.PIPE, stderr=subprocess.PIPE, shell=True)
 try:
         pid = proc.communicate()[0]
         pid = pid.split(" ")
         pid = int(pid[0])
+	write_log("[!] Killing the old Artillery process...")
         print "[*] Killing Old Artillery Process...."
         os.kill(pid, signal.SIGKILL)
 except: 
@@ -20,4 +22,5 @@ except:
 
 print "[*] Restarting Artillery Server..."
 if os.path.isfile("/var/artillery/artillery.py"):
+	write_log("[*] Restarting the Artillery Server process...")
         subprocess.Popen("python /var/artillery/artillery.py &", stdout=subprocess.PIPE, stderr=subprocess.PIPE, shell=True)
