@@ -11,6 +11,8 @@ version 0.7.1
 * added ability to remove the default port check for the SSH harden config script, you can now turn this to off
 * added error handling to the mail program versus erroring out and closing artilery if the mail server was not properly found
 * added a check that looks for to see if honeypot_ban is active, if not the wording is changed to detected versus blocked
+* fixed a double import bug on src.core when import logging would not prompt anything more for the initial artillery service starting
+* added the start and restart via syslog, will not let you know via syslog when artillery is being restarted
 
 ~~~~~~~~~~~~~~~~~~~~~~
 version 0.7
